--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   http: ^1.3.0
+  flutter_stripe: ^11.4.0
 
 dev_dependencies:
   flutter_test:
