--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.1.2
   http: ^1.3.0
   flutter_stripe: ^11.4.0
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
