--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.7.0
 
 dependencies:
   flutter:
@@ -19,6 +19,8 @@ dependencies:
   http: ^1.3.0
   flutter_stripe: ^11.4.0
   cached_network_image: ^3.2.1
+  flutter_rating_bar: ^4.0.1
+  googleapis: ^13.2.0
 
 dev_dependencies:
   flutter_test:
@@ -27,4 +29,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  assets:
+    - assets/
   uses-material-design: true
