--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_rating_bar: ^4.0.1
   googleapis: ^13.2.0
+  google_fonts: ^6.2.1
+  rive: ^0.13.20
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
