--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,6 +30,13 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/fox_profile.jpg" # Path to your app icon
+  adaptive_icon_background: "#ffffff" # Optional for Android adaptive icons
 
 flutter:
   assets:
