--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.20.2
   google_ml_kit: ^0.20.0
   image_picker: ^1.1.2
+  speech_to_text: ^7.3.0
 
 dev_dependencies:
   flutter_test:
