--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon index"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
