--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <application
-        android:label="ecommerce_provider"
+        android:label="EcomCase"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
