--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -28,19 +28,20 @@ dependencies:
   google_ml_kit: ^0.20.0
   image_picker: ^1.1.2
   speech_to_text: ^7.3.0
+  flutter_spinkit: ^5.2.2
+  flutter_markdown: ^0.7.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.14.3
+  flutter_launcher_icons: ^0.13.0
 
 flutter_launcher_icons:
   android: true
-  ios: true
-  image_path: "assets/fox_profile.jpg" # Path to your app icon
-  adaptive_icon_background: "#ffffff" # Optional for Android adaptive icons
+  image_path: "assets/app_logo.png" # Path to your app icon
+  #adaptive_icon_background: "#ffffff" # Optional for Android adaptive icons
 
 flutter:
   assets:
