--- a/RAG_pipeline/requirements.txt
+++ b/RAG_pipeline/requirements.txt
@@ -1,10 +1,18 @@
+jsonschema
+python-dotenv
 langgraph
+langchain
+langchain-core
+langchain-community
 langchain-google-genai
-langchain-community
 langchain-huggingface
+langchain-text-splitters
 langchain-classic
-langchain-community
+faiss-cpu
 sentence-transformers
 google-generativeai
+pymongo
 redis
+redisvl
+numpy
 flask
