--- a/RAG_pipeline/requirements.txt
+++ b/RAG_pipeline/requirements.txt
@@ -1,18 +1,25 @@
-jsonschema
 python-dotenv
-langgraph
-langchain
-langchain-core
-langchain-community
-langchain-google-genai
-langchain-huggingface
-langchain-text-splitters
-langchain-classic
-faiss-cpu
-sentence-transformers
-google-generativeai
-pymongo
-redis
-redisvl
-numpy
 flask
+
+# LangChain ecosystem (compatible versions)
+langchain==0.1.20
+langchain-core==0.1.52
+langchain-community==0.0.33
+langchain-google-genai==0.1.4
+langchain-huggingface==0.1.0
+langchain-text-splitters==0.0.1
+langchain-classic==0.0.2
+
+# Embeddings and model dependencies
+sentence-transformers==2.5.1
+faiss-cpu==1.7.4
+
+# Redis + vector indexing
+redis==5.0.1
+redisvl==0.2.9
+
+# Other
+pymongo==4.6.1
+jsonschema
+google-generativeai==0.4.0
+numpy==1.26.4
