Specify versions for langchain and dependencies
Updated langchain and related packages to specific versions.

--- a/RAG_pipeline/requirements.txt
+++ b/RAG_pipeline/requirements.txt
@@ -1,16 +1,16 @@
 jsonschema
 python-dotenv
 langgraph
-langchain
+langchain>=0.2.0
 langchain-core
 langchain-community
-langchain-google-genai
+langchain-google-genai>=1.0.0
 langchain-huggingface
 langchain-text-splitters
 langchain-classic
 faiss-cpu
 sentence-transformers
-google-generativeai
+google-generativeai>=0.5.0
 pymongo
 redis
 redisvl
