--- a/RAG_pipeline/requirements.txt
+++ b/RAG_pipeline/requirements.txt
@@ -1,16 +1,17 @@
+pip==25.3
 jsonschema
 python-dotenv
 langgraph
-langchain>=0.2.0
-langchain-core
-langchain-community
-langchain-google-genai>=1.0.0
+langchain==0.3.2
+langchain-core==0.3.19
+langchain-community==0.3.9
+langchain-google-genai==1.0.7
+google-generativeai==0.7.2
 langchain-huggingface
 langchain-text-splitters
 langchain-classic
 faiss-cpu
 sentence-transformers
-google-generativeai>=0.5.0
 pymongo
 redis
 redisvl
