--- a/RAG_pipeline/requirements.txt
+++ b/RAG_pipeline/requirements.txt
@@ -1,15 +1,15 @@
-pip==25.3
+
 jsonschema
 python-dotenv
 langgraph
-langchain==0.3.2
-langchain-core==0.3.19
-langchain-community==0.3.9
-langchain-google-genai==1.0.7
-google-generativeai==0.7.2
+langchain
+langchain-core
+langchain-community
+langchain-google-genai==2.0.0
+google-generativeai==0.7.0
+google-ai-generativelanguage==0.6.5
 langchain-huggingface
 langchain-text-splitters
-langchain-classic
 faiss-cpu
 sentence-transformers
 pymongo
@@ -17,3 +17,4 @@ redis
 redisvl
 numpy
 flask
+langgraph-checkpoint-redis
